--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
             
             async function fetchOrderbook() {
                 try {
-                    const response = await fetch('orderbook.json');
+                    const response = await fetch('https://joinmarket.sgn.space/orderbook.json');
                     if (!response.ok) {
                         throw new Error('Failed to fetch orderbook data');
                     }
